# very-good-document-imposer

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  STATUS.md  THIRD-PARTY-NOTICES.md  deny.toml
.github/workflows/: ci.yml
crates/vgdi-cli/: Cargo.toml
crates/vgdi-cli/src/: main.rs
crates/vgdi-engine/: Cargo.toml
crates/vgdi-engine/src/: barcode.rs  boxes.rs  error.rs  geom.rs  imposition.rs  lib.rs  marks.rs  plan.rs  qpdf_backend.rs
crates/vgdi-engine/tests/: imposition_qpdf.rs
crates/vgdi-types/: Cargo.toml
crates/vgdi-types/src/: job.rs  lib.rs  marks.rs  scheme.rs  sheet.rs
docs/: m1-design.md  m2-design.md
docs/adr/: 0001-platform-and-stack.md
examples/: nup-2x2.json
manual-tests/: 01-nup-full-marks.json  02-step-repeat.json  03a-bleed-pull-on.json  03b-bleed-pull-off.json  04-saddle-fold-collation.json  05-perfect-bound-collation.json  06-saddle-bleed.json  README.md  metamorphosis-booklet.json  testcard-steprepeat-creep.json  testcard-steprepeat.json
manual-tests/m2-work-styles/: README.md  gang-work-and-turn.json  nup-bad-back.json  nup-perfector.json  nup-sheetwise.json  nup-tumble-slug.json  nup-tumble.json  nup-work-and-turn.json  run.sh
spikes/spike0-qpdf/: Cargo.toml
spikes/spike0-qpdf/src/: main.rs
tests/fixtures/: README.md
