[package]
name = "vgdi-engine"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless deterministic imposition engine: JobSpec -> ImpositionPlan -> imposed PDF."

[features]
# Pure planner + geometry build with no features. The qpdf backend (real PDF emit) is opt-in
# so unit tests and the pure crate compile without the vendored C++ build.
default = []
qpdf-backend = ["dep:qpdf"]

[dependencies]
vgdi-types = { workspace = true }
thiserror = { workspace = true }
qpdf = { workspace = true, optional = true }

[dev-dependencies]
# For the feature-gated end-to-end test: author fixture PDFs directly with qpdf.
qpdf = { workspace = true }

