[package]
name = "vgdi-types"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain model (JobSpec, schemes, sheets) for Very Good Document Imposer. Pure, no PDF deps."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
